Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="style.css">  <!--links to the CSS file for styling-->
   </head>
   <body>
-    <h1>William Cummings</h1>
-    <h2>Web Developer and Programmer</h2>
-    <p>Hello! I'm William, a passionate web developer who loves building websites and programming!</p>
+    <div class="profile-card">
+      <img src="img/example.png" alt="Profile picture">
+      <h1>William Cummings</h1>
+      <h2>Web Developer and Programmer</h2>
+      <p>Hello! I'm William, a passionate web developer who loves building websites and programming!</p>
+
+      <h3>My Favorite Websites</h3>
+      <ul>  <!--unorded list-->
+        <li><a href="https://youtube.com/">YouTube</a></li>
+        <li><a href="https://github.com/">GitHub</a></li>
+        <li><a href="https://netflix.com/">Netflix</a></li>
+        <li><a href="https://css-tricks.com/">CSS-Tricks</a></li>
+      </ul>
+    </div>
   </body>
 </html>
